--- a/remote/production/Caddyfile
+++ b/remote/production/Caddyfile
@@ -1,4 +1,10 @@
-http://greenlight.owezzy.tech { 
+# Set the email address that should be used to contact you if there is a problem with
+# your TLS certificates.
+{
+	email owezzytech@gmail.com
+}
+
+greenlight.owezzy.tech { 
 	respond /debug/* "Not Permitted" 403
 	reverse_proxy localhost:4000
 }
